tests/fixtures/invalid/max_list_int.py
# Cannot call max() with List[int], Int
x = max([1, 2, 3], 1)
